[package]
name = "snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread", "process"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
