[package]
name = "snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
